# vulkan-toy

./: .gitignore  CMakeLists.txt  README.md
src/: camera.h  main.cpp  terrainchunkmanager.cpp  terrainchunkmanager.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_types.h
src/lib/: vk_mem_alloc.cpp
src/shaders/: default_lit.frag  hellotriangle.vert  hellotriangle2.frag  hellotriangle2.vert  terrain_textured_lit.frag  textured_lit.frag  tri_mesh.vert  water.frag
